chore: revert participant.jointed_at
