# server/docs/swagger.json
@@ -1740,6 +1740,12 @@
         "data.LandingPageListItemVO": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "defaultLang": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
